--- a/client/bower.json
+++ b/client/bower.json
@@ -15,14 +15,14 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.16",
-    "angular-route": "~1.2.16",
+    "angular": "~1.3",
+    "angular-route": "~1.3",
     "angular-ui-bootstrap": "~0.11.0",
     "bootstrap": "~3.1.1",
     "jquery": "~2.1.1",
-    "angular-animate": "~1.2.16",
+    "angular-animate": "~1.3",
     "animate.css": "~3.1.1",
     "angular-ui-bootstrap-bower": "~0.11.0",
-    "es6-shim": "~0.13.0",
+    "es6-shim": "~0.13.0"
   }
 }
