--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -1,5 +1,18 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=true
+auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=
+auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=app/server.js
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=false
+file.reference.server-app=app
+file.reference.server-test=test
 file.reference.TripPlannerServer-app=app
 file.reference.TripPlannerServer-test=test
 files.encoding=UTF-8
-source.folder=${file.reference.TripPlannerServer-app}
-test.folder=${file.reference.TripPlannerServer-test}
+run.as=node.js
+source.folder=${file.reference.server-app}
+start.file=index.html
+test.folder=${file.reference.server-test}
+web.context.root=/server
