--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -7,12 +7,13 @@ browser.autorefresh.Chrome.INTEGRATED=true
 browser.highlightselection.Chrome.INTEGRATED=true
 browser.run=false
 file.reference.server-app=app
+file.reference.server-src=src
 file.reference.server-test=test
 file.reference.TripPlannerServer-app=app
 file.reference.TripPlannerServer-test=test
 files.encoding=UTF-8
 run.as=node.js
-source.folder=${file.reference.server-app}
+source.folder=${file.reference.server-src}
 start.file=index.html
 test.folder=${file.reference.server-test}
 web.context.root=/server
