--- a/client/bower.json
+++ b/client/bower.json
@@ -23,6 +23,7 @@
     "angular-animate": "~1.3",
     "animate.css": "~3.1.1",
     "angular-ui-bootstrap-bower": "~0.11.0",
-    "es6-shim": "~0.13.0"
+    "es6-shim": "~0.13.0",
+    "bootstrap-material-design": "~0.1.2"
   }
 }
