getting ready for server-side authentication

--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -3,17 +3,19 @@ auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=src/server.js
+auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
 browser.autorefresh.Chrome.INTEGRATED=true
 browser.highlightselection.Chrome.INTEGRATED=true
 browser.run=false
 file.reference.server-app=app
 file.reference.server-src=src
 file.reference.server-test=test
+file.reference.tripplanner-server=.
 file.reference.TripPlannerServer-app=app
 file.reference.TripPlannerServer-test=test
 files.encoding=UTF-8
 run.as=node.js
-source.folder=${file.reference.server-src}
+source.folder=${file.reference.tripplanner-server}
 start.file=index.html
 test.folder=${file.reference.server-test}
 web.context.root=/server
