--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,14 @@
     "body-parser": "^1.4.3",
     "express": "^4.5.0",
     "bluebird": "^2.3.2",
-    "promise": "^6.0.0"
+    "promise": "^6.0.0",
+    "express-session": "^1.9.2",
+    "ejs": "^1.0.0",
+    "passport": "^0.2.1",
+    "passport-google-oauth": "^0.1.5",
+    "morgan": "^1.5.0",
+    "cookie-parser": "^1.3.3",
+    "connect-flash": "^0.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
