--- a/server/nbproject/private/private.properties
+++ b/server/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 auxiliary.org-netbeans-modules-javascript-nodejs.debug_2e_port=9292
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
-auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_path=
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_path=/usr/bin/nodemon
 browser=Chrome.INTEGRATED
 external.project.url=
 server=EXTERNAL
