--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
     "morgan": "^1.5.0",
+    "bcrypt-nodejs" : "latest",
     "cookie-parser": "^1.3.3",
     "connect-flash": "^0.1.1"
   },
