--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,10 @@
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
     "morgan": "^1.5.0",
-    "bcrypt-nodejs" : "latest",
+    "bcrypt-nodejs": "latest",
     "cookie-parser": "^1.3.3",
-    "connect-flash": "^0.1.1"
+    "connect-flash": "^0.1.1",
+    "passport-facebook": "^1.0.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
