--- a/server/bower.json
+++ b/server/bower.json
@@ -24,7 +24,6 @@
         "animate.css": "~3.1.1",
         "angular-ui-bootstrap-bower": "~0.11.0",
         "es6-shim": "~0.13.0",
-        "bootstrap-material-design": "~0.1.2",
-        "hello": "~1.2.4"
+        "bootstrap-material-design": "~0.1.2"
     }
 }
