--- a/server/package.json
+++ b/server/package.json
@@ -1,38 +1,40 @@
 {
-    "name": "TripPlanner",
-    "version": "0.0.0",
-    "description": "",
-    "main": "./client/index.html",
-    "directories": {
-        "test": "test"
-    },
-    "private": true,
-    "dependencies": {
-        "mongoose": "3.8.9",
-        "body-parser": "^1.4.3",
-        "express": "^4.5.0",
-        "bluebird": "^2.3.2",
-        "promise": "^6.0.0",
-        "express-session": "^1.9.2",
-        "ejs": "^1.0.0",
-        "passport": "^0.2.1",
-        "passport-google-oauth": "^0.1.5",
-        "morgan": "^1.5.0",
-        "bcrypt-nodejs": "latest",
-        "cookie-parser": "^1.3.3",
-        "connect-flash": "^0.1.1",
-        "passport-facebook": "^1.0.3"
-    },
-    "scripts": {
-        "postinstall": "bower install",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Lada Riha",
-    "license": "ISC",
-    "devDependencies": {
-        "grunt": "^0.4.5",
-        "grunt-contrib-jshint": "^0.10.0",
-        "jshint-stylish": "^0.2.0",
-        "time-grunt": "^0.3.2"
-    }
+  "name": "TripPlanner",
+  "version": "0.0.0",
+  "description": "",
+  "main": "./client/index.html",
+  "directories": {
+    "test": "test"
+  },
+  "private": true,
+  "dependencies": {
+    "mongoose": "3.8.9",
+    "body-parser": "^1.4.3",
+    "express": "^4.5.0",
+    "bluebird": "^2.3.2",
+    "promise": "^6.0.0",
+    "express-session": "^1.9.2",
+    "ejs": "^1.0.0",
+    "passport": "^0.2.1",
+    "passport-google-oauth": "^0.1.5",
+    "morgan": "^1.5.0",
+    "bcrypt-nodejs": "latest",
+    "cookie-parser": "^1.3.3",
+    "connect-flash": "^0.1.1",
+    "passport-facebook": "^1.0.3"
+  },
+  "scripts": {
+    "postinstall": "bower install",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Lada Riha",
+  "license": "ISC",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.10.0",
+    "jshint-stylish": "^0.2.0",
+    "time-grunt": "^0.3.2",
+    "grunt-contrib-clean": "^0.6.0",
+    "underscore": "^1.7.0"
+  }
 }
