--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -1,12 +1,12 @@
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
-auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=false
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=true
-auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_restart=false
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_restart=true
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=src/server.js
 auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
-browser.autorefresh.Chrome.INTEGRATED=true
-browser.highlightselection.Chrome.INTEGRATED=true
+browser.autorefresh.Chrome.INTEGRATED=false
+browser.highlightselection.Chrome.INTEGRATED=false
 browser.run=true
 file.reference.server-app=app
 file.reference.server-client=client
@@ -21,5 +21,4 @@ run.as=node.js
 site.root.folder=${file.reference.server-client}
 source.folder=${file.reference.tripplanner-server}
 start.file=index.html
-test.folder=${file.reference.server-test}
 web.context.root=/server
