--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "jshint-stylish": "^0.2.0",
     "time-grunt": "^0.3.2",
     "grunt-contrib-clean": "^0.6.0",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "grunt-plato": "^1.2.1"
   }
 }
