allowing late definition for functions

--- a/server/.jshintrc
+++ b/server/.jshintrc
@@ -9,7 +9,7 @@
     "forin": true,
     "immed": true,
     "node": true,
-    "latedef": true,
+    "latedef": "nofunc",
     "newcap": true,
     "quotmark": "double",
     "trailing": true,
