getting ready for trip day crud

--- a/server/nbproject/private/private.properties
+++ b/server/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 auxiliary.org-netbeans-modules-javascript-nodejs.debug_2e_port=9292
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
-auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_path=nodemon_wrapper.sh
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_path=/var/www/node-v0.10.34-linux-x64/bin/node
 browser=Chrome.INTEGRATED
 external.project.url=http://localhost:13131
 server=EXTERNAL
