--- a/server/bower.json
+++ b/server/bower.json
@@ -15,16 +15,16 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3",
-    "angular-route": "~1.3",
+    "angular": "~1.3.13",
     "angular-ui-bootstrap": "~0.11.0",
     "bootstrap": "~3.1.1",
     "jquery": "~2.1.1",
-    "angular-animate": "~1.3",
-    "animate.css": "~3.1.1",
     "angular-ui-bootstrap-bower": "~0.11.0",
-    "es6-shim": "~0.13.0",
-    "bootstrap-material-design": "~0.1.2",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "bootstrap-material-design": "0.2.2",
+    "es6-shim": "0.24.0",
+    "requirejs": "2.1.16",
+    "textAngular": "1.3.9",
+    "components-font-awesome": "4.3.0"
   }
 }
