--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "bcrypt-nodejs": "latest",
     "cookie-parser": "^1.3.3",
     "connect-flash": "^0.1.1",
-    "passport-facebook": "^1.0.3"
+    "passport-facebook": "^1.0.3",
+    "sanitizer" : "~0.1.2"
   },
   "scripts": {
     "postinstall": "bower install",
