--- a/server/package.json
+++ b/server/package.json
@@ -8,21 +8,21 @@
   },
   "private": true,
   "dependencies": {
-    "mongoose": "3.8.9",
-    "body-parser": "^1.4.3",
-    "express": "^4.5.0",
-    "bluebird": "^2.3.2",
-    "promise": "^6.0.0",
-    "express-session": "^1.9.2",
-    "ejs": "^1.0.0",
-    "passport": "^0.2.1",
-    "passport-google-oauth": "^0.1.5",
-    "morgan": "^1.5.0",
     "bcrypt-nodejs": "latest",
-    "cookie-parser": "^1.3.3",
+    "bluebird": "^2.3.2",
+    "body-parser": "^1.4.3",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.3",
+    "ejs": "^1.0.0",
+    "express": "^4.5.0",
+    "express-session": "^1.9.2",
+    "mongoose": "3.8.9",
+    "morgan": "^1.5.0",
+    "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
-    "sanitizer" : "~0.1.2"
+    "passport-google-oauth": "^0.1.5",
+    "promise": "^6.0.0",
+    "sanitizer": "^0.1.2"
   },
   "scripts": {
     "postinstall": "bower install",
