finished create note action

--- a/server/src/config.json
+++ b/server/src/config.json
@@ -9,7 +9,7 @@
             "providers": "./core/db/provider/",
             "models": "./model/",
             "tripExtensions" : "./ext/trip/",
-            "tripDayExtensions" : "./ext/tripday/",
+            "tripDayExtensions" : "./ext/day/",
             "static" : "../client"
         }
 
