--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -1,5 +1,5 @@
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
-auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=false
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_restart=true
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=
