--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "private": true,
   "dependencies": {
+    "async": "0.9.0",
     "bcrypt-nodejs": "latest",
     "bluebird": "^2.3.2",
     "body-parser": "^1.4.3",
