--- a/server/bower.json
+++ b/server/bower.json
@@ -25,6 +25,7 @@
     "es6-shim": "0.24.0",
     "requirejs": "2.1.16",
     "textAngular": "1.3.9",
-    "components-font-awesome": "4.3.0"
+    "components-font-awesome": "4.3.0",
+    "async": "0.9.2"
   }
 }
