--- a/server/nbproject/project.properties
+++ b/server/nbproject/project.properties
@@ -5,6 +5,8 @@ auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_restart=true
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=src/server.js
 auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 browser.autorefresh.Chrome.INTEGRATED=false
 browser.highlightselection.Chrome.INTEGRATED=false
 browser.run=true
