--- a/server/bower.json
+++ b/server/bower.json
@@ -17,15 +17,17 @@
   "dependencies": {
     "angular": "~1.3.13",
     "angular-ui-bootstrap": "~0.11.0",
-    "bootstrap": "~3.1.1",
     "jquery": "~2.1.1",
     "angular-ui-bootstrap-bower": "~0.11.0",
     "angular-ui-router": "~0.2.13",
-    "bootstrap-material-design": "0.2.2",
-    "es6-shim": "0.24.0",
     "requirejs": "2.1.16",
     "textAngular": "1.3.9",
     "components-font-awesome": "4.3.0",
-    "async": "0.9.2"
+    "async": "0.9.2",
+    "bootstrap-material-design": "0.3.0",
+    "es6-shim": "0.31.2",
+    "bootstrap": "~3.1.1",
+    "arrive": "2.1.0",
+    "snackbarjs": "1.0.0"
   }
 }
