--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     },
     "scripts": {
         "postinstall": "./node_modules/bower/bin/bower install",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node ./src/server.js"
     },
     "author": "Lada Riha",
     "license": "ISC",
